--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a legacy project for refresh and improvement knowledge of 🅰️ngularJS. Project Pokedex",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "grunt"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,13 @@
   "bugs": {
     "url": "https://github.com/zearkiatos/angularjs-pokedex/issues"
   },
-  "homepage": "https://github.com/zearkiatos/angularjs-pokedex#readme"
+  "homepage": "https://github.com/zearkiatos/angularjs-pokedex#readme",
+  "devDependencies": {
+    "grunt": "^1.3.0",
+    "grunt-contrib-watch": "^1.1.0"
+  },
+  "dependencies": {
+    "grunt-contrib-connect": "^3.0.0",
+    "save-dev": "0.0.1-security"
+  }
 }
