--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "grunt": "^1.3.0",
     "grunt-contrib-connect": "^3.0.0",
     "grunt-contrib-watch": "^1.1.0"
+  },
+  "dependencies": {
+    "angular": "^1.8.2"
   }
 }
