--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "angular": "^1.8.2",
     "bootstrap": "^4.5.3",
-    "bootswatch": "^4.5.3"
+    "bootswatch": "^4.5.3",
+    "jquery": "^3.5.1"
   }
 }
