--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "angular": "^1.8.2",
+    "angular-route": "^1.8.2",
     "bootstrap": "^4.5.3",
     "bootswatch": "^4.5.3",
     "jquery": "^3.5.1"
