--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "grunt",
-    "build": "grunt uglify"
+    "build": "grunt build"
   },
   "repository": {
     "type": "git",
